--- a/css/style.css
+++ b/css/style.css
@@ -8,24 +8,27 @@
 
 body {
 font-family: 'Roboto Condensed', sans-serif;
-background-color: #e9e9eb;
+background-color: #F5F5F5;
 }
 .name {
   text-align: center;
-  
+  margin-bottom: 30px;
 }
 .picture {
-    width: 200px;
+    width: 250px;
     display: block;
     margin: 0 auto;
+    margin-bottom: 30px;
 } 
 
 .container {
     width: 80%;
     margin: 0 auto;
     margin-bottom: 20px;
-    display: block;
-    justify-content: center;
+}
+
+.intro {
+    margin-bottom: 20px;
 }
 
 
@@ -34,8 +37,10 @@ background-color: #e9e9eb;
     margin: 0 auto;
     Padding: 0.5em;
     text-align: center;
-    border-style:none;
     background-color: white;
+    border-style: solid;
+    border-color: #F5F5F5;
+
 }
 .main-nav li a {
     text-decoration: none;
@@ -45,11 +50,10 @@ background-color: #e9e9eb;
 .nav li {
 font-size: 20px;
 color: grey;
-
-
+display: block;
 }
 
-.intro p {
+p {
 text-align: center;
 padding: 10px 20px;
 }
@@ -57,6 +61,15 @@ padding: 10px 20px;
 .title {
     text-align: center;
     padding: 20px;
+    margin-bottom: 20px;
+}
+
+.portfolio {
+    margin-bottom: 20px;
+}
+
+.portitle {
+    text-align: center;
 }
 
 
