--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ background-color: #F5F5F5;
 }
 .name {
   text-align: center;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 .picture {
     width: 250px;
@@ -29,6 +29,7 @@ background-color: #F5F5F5;
 
 .intro {
     margin-bottom: 20px;
+  
 }
 
 
@@ -78,9 +79,11 @@ padding: 10px 20px;
 }
 
 .main-footer {
-    flex-direction: row;
-    height:100px;
-    padding-top: 20px;
+    width: 80%;
+    margin: 0 auto;
+    
+    height:50px;
+    padding: 30px;
 }
 
 .footer-select {
@@ -90,6 +93,10 @@ padding: 10px 20px;
   float:right;
 }
 
+#portfolio-id {
+
+    
+}
 
 }
 /* Media Queries */
