--- a/css/style.css
+++ b/css/style.css
@@ -1,131 +1,105 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 /* BASE STYLES */
-
 body {
-font-family: 'Roboto Condensed', sans-serif;
-background-color: #F5F5F5;
+	font-family: 'Roboto Condensed', sans-serif;
+	background-color: #F5F5F5;
 }
 .name {
-    text-align: center;
+	text-align: center;
 }
 .intro-picture {
-    width: 250px;
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 30px;
-
+	width: 50%;
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 30px;
 }
 .picture {
-    width: 300px;
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 30px;
-} 
-
-
+	width: 80%;
+	display: block;
+	margin: 0 auto;
+	margin-bottom: 30px;
+}
 .container {
-    width: 80%;
-    margin: 0 auto;
-    margin-bottom: 20px;
+	width: 80%;
+	margin: 0 auto;
+	margin-bottom: 20px;
 }
-
 .intro {
-    margin-bottom: 20px;
-  
+	margin-bottom: 20px;
 }
-
-
 .main-nav li {
-    list-style: none;
-    margin: 0 auto;
-    Padding: 0.5em;
-    text-align: center;
-    background-color: white;
-    border-style: solid;
-    border-color: #F5F5F5;
-    color: grey;
-
+	list-style: none;
+	margin: 0 auto;
+	Padding: 0.5em;
+	text-align: center;
+	background-color: white;
+	border-style: solid;
+	border-color: #F5F5F5;
+	color: grey;
 }
 .main-nav li a {
-    text-decoration: none;
-    color: grey; 
+	text-decoration: none;
+	color: grey;
 }
-
 .nav li {
-font-size: 20px;
-color: grey;
-display: block;
+	font-size: 20px;
+	color: grey;
+	display: block;
 }
-
 p {
-    font-size: 1.15em;
-text-align: center;
-padding: 10px 25px;
+	font-size: 1.15em;
+	text-align: center;
+	padding: 10px 45px;
 }
-
 .title {
-    text-align: center;
-    padding: 20px;
-    margin-bottom: 20px;
+	text-align: center;
+	padding: 20px;
+	margin-bottom: 20px;
 }
-
-
-
 }
 .portfolio {
-    margin-bottom: 20px;
-    background-color: white;
+margin-bottom: 20px;
+background-color: white;
 }
-
-.portfolio p
-{
-    margin-bottom: 20px;
+.portfolio p{
+margin-bottom: 20px;
 }
-
 .portitle {
-    text-align: center;
+text-align: center;
 }
-
 .contact {
-    background-color: #grey;
-    margin: 20px;
+background-color: #grey;
+margin: 20px;
 }
 .contact p {
-    line-height: 1.5
-    ;
+line-height: 1.5;
 }
-
 .main-footer {
-    width: 80%;
-    height:50px;
-    padding: 15px;
+width: 85%;
+height:50px;
+padding: 15px 10px;
 }
-
 .footer-select {
-    display: inline;
+display: inline;
 }
-
 .bottom-nav li {
-    display: none;
-    float: right;
+display: flex;
+display: none;
+float:right;
 }
-
 .bottom-nav li a {
 text-decoration: none;
-
+padding: 0 10px;
 }
-    
 #back-top {
-  float:right;
-  margin-inline-end: -80px;
-  text-decoration: none;
+float:right;
+margin-inline-end: -80px;
+text-decoration: none;
 }
-
 #portfolio-id {
 background-color:white;
 }
@@ -134,91 +108,92 @@ background-color:white;
 }
 
 
+
+
+
 /* Media Queries */
-
 @media (min-width: 768px) {
-    .container {
-        display:block;
-        padding: 0 10px;
-    }
 
-          .main-nav li  {
-              color:darkgrey;
-              background-color:#F5F5F5;;
-          }
+.portfolio {
+display: flex;
+flex-direction: column;
+}
+.intro {
+display: flex;
+flex-direction: row-reverse;
+}
+.intro p {
+float: left;
+}
+.main-footer {
+width: 100%;
+display: inline-block;
+}
 
-          #back-top {
-              display: none;
-          }
-          .bottom-nav {
-              justify-content: space-between;
-          }
+.picture {
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+}
 
-          .bottom-nav li {
-                display: initial;
-                flex-flow: row;
-                
-          }
+.bottom-nav li a {
+text-decoration: none;
+}
 
-        .bottom-nav li a {
-            text-decoration: none;
-        }
-        }
+
+}
 /* media queries */
-
 @media (min-width: 768px) {
-    .container {
-        display: block;
-        padding: 10px 50px;
-        text-align: center;
-        margin-bottom: 50px;
-    }
-    
-        .main-nav ul {
-            display: flex;
-            margin: auto;
-            
-        }
-          .main-nav li {
-            display: inline;
-            background-color:#F5F5F5;
-            padding: 0px 50px;
-          }
-    .intro {
-        display: flex;
-        flex-direction: row-reverse;
-    }
-    .intro p {
-        float: left;
-    }
-          #back-top {
-              display: none;
-          }
-
+.container {
+display: block;
+padding: 10px 50px;
+text-align: center;
+margin-bottom: 50px;
+}
+.main-nav ul {
+display: flex;
+margin: auto;
+}
+.main-nav li {
+display: inline;
+background-color:#F5F5F5;
+padding: 0px 50px;
+color:darkgrey;
+}
+}
 .bottom-nav li {
-    display:flex;
-    flex-direction: row-reverse;
+display:inline-flex;
+margin-top: -15px;
+display: initial;
+flex-flow: row;
+}
+.bottom-nav a {
+padding: 20px;
+}
+
+#back-top {
+    display: none;
 }
 
 
 @media (min-width: 1024px) {
 .container {
 width: 100%;
-    justify-content: space-between;
+justify-content: space-between;
 }
-
 .name {
-    float:left;
+float:left;
 }
-
-    .main-nav, .name {
-        display:inline-flex;
-        padding: 0 50px;
-        justify-content: space-between;
-    }
-
+.main-nav, .name {
+display:inline-flex;
+padding: 0 50px;
+justify-content: space-between;
+}
 .main-nav {
-    float: right;
-    padding-top: 25px;
+float: right;
+padding-top: 25px;
 }
 
+#back-top {
+    display: none;
+}
